<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="246dp"
        android:layout_height="414dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/list_btn"
            android:layout_width="246dp"
            android:layout_height="73dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:onClick="drugsList"
            android:text="@string/drugs_list"
            android:textSize="16sp" />

        <Button
            android:id="@+id/alarms_btn"
            android:layout_width="246dp"
            android:layout_height="59dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:onClick="alarmSettings"
            android:text="@string/alarm_settings"
            android:textSize="16sp" />

        <Button
            android:id="@+id/close_person_btn"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:onClick="closePerson"
            android:text="@string/close_person"
            android:textSize="16sp" />

        <Button
            android:id="@+id/first_aid_btn"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:onClick="firstAid"
            android:text="@string/first_aid"
            android:textSize="16sp" />

        <Button
            android:id="@+id/picture_btn"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/picture_btn_text"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3B8F88"
            android:onClick="alarmReceiverTest"
            android:text="Button" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>